--- a/website/newsletter/269/index.mdx
+++ b/website/newsletter/269/index.mdx
@@ -53,7 +53,7 @@ The State of React 2025 survey results are out. It’s impossible to summarize i
 - React Server Components and Server Functions divide
 - Although usage is still low, `<Activity>` reaches a 100% satisfaction score
 - TanStack Query and Zustand remain the favorite third-party libraries
-- Your favorite resources are the official docs, this newsletter (❤️), Syntax.fm, Theo and Josh Comeau.
+- Your favorite resources are the official docs, this newsletter (❤️), Syntax.fm, Theo.
 
 Read also the [breakdown from Aurora Scharff](https://certificates.dev/blog/breaking-down-state-of-react-2025-results), who wrote the survey conclusion.
 
