--- a/website/newsletter/270/index.mdx
+++ b/website/newsletter/270/index.mdx
@@ -43,6 +43,8 @@ It works like magic in the background:
 
 ## ⚛️ React {#react}
 
+[![How we rebuilt Next.js with AI in one week](/emails/issues/270/vinext.jpg)](https://blog.cloudflare.com/vinext/)
+
 [How we rebuilt Next.js with AI in one week](https://blog.cloudflare.com/vinext/)
 
 A single Cloudflare engineer rebuilt the Next.js API surface (App Router, RSC, Server Actions, middleware) on Vite in one week using AI for $1,100. Using Oxc/Rolldown, it builds 4.4x and produces 57% smaller bundles. Using the Vite Environment API, it overcomes OpenNext limits, making it compatible with edge runtimes such as Cloudflare Workers.
@@ -101,7 +103,9 @@ Tired of rewriting the same MUI forms across projects? **FormEngine Core** lets 
 
 ## 📱 React-Native {#react-native}
 
-[**Hermes-node**](https://x.com/tmikov/status/2024609186936660170)
+[![Hermes-node](/emails/issues/270/hermes.jpg)](https://x.com/tmikov/status/2024609186936660170)
+
+**[Hermes-node](https://x.com/tmikov/status/2024609186936660170)**
 
 Tzvetan Mikov from the Hermes team announced Hermes-node, a CLI version of Hermes compatible with the Node.js API. Since Hermes-node acts as a compatibility layer, it can use original Node.js module implementations without needing to rewrite them \- most work out of the box. You can think of this as simply swapping the V8 engine for Hermes. If combined with compiling Hermes to binary code, this feature could bring significant benefits to the entire Node.js ecosystem.
 
