--- a/website/newsletter/270/index.mdx
+++ b/website/newsletter/270/index.mdx
@@ -3,7 +3,6 @@ slug: /270
 title: "This Week In React #270: Next.js, React Router, TanStack, Ink, Async, AI | Hermes, React Navigation, CSS Grid, Maestro, QuickPush, Screens, Expo Skills, Async Storage | Node, Oxfmt, TypeScript, Border Shape, Sprites"
 authors: [slorber]
 date: 02-25-2026
-unlisted: true
 ---
 
 Hello everyone, Krzysztof and Kacper from [Software Mansion](https://swmansion.com/) here 👋
@@ -45,7 +44,7 @@ It works like magic in the background:
 
 [![How we rebuilt Next.js with AI in one week](/emails/issues/270/vinext.jpg)](https://blog.cloudflare.com/vinext/)
 
-[How we rebuilt Next.js with AI in one week](https://blog.cloudflare.com/vinext/)
+**[How we rebuilt Next.js with AI in one week](https://blog.cloudflare.com/vinext/)**
 
 A single Cloudflare engineer rebuilt the Next.js API surface (App Router, RSC, Server Actions, middleware) on Vite in one week using AI for $1,100. Using Oxc/Rolldown, it builds 4.4x and produces 57% smaller bundles. Using the Vite Environment API, it overcomes OpenNext limits, making it compatible with edge runtimes such as Cloudflare Workers.
 
@@ -156,8 +155,6 @@ Tzvetan Mikov from the Hermes team announced Hermes-node, a CLI version of Herme
 
 ## 🤭 Fun {#fun}
 
-<Todo />
-
-[![alt](/emails/issues/215/meme.jpg)](https://twitter.com/TODOTODOTODOTODOTODOTODOTODOTODOTODOTODO)
+[![alt](/emails/issues/270/meme.jpg)](https://x.com/AdrianDittmann/status/2026184733743587420)
 
 See ya! 👋
