--- a/website/newsletter/270/index.mdx
+++ b/website/newsletter/270/index.mdx
@@ -1,7 +1,7 @@
 ---
 slug: /270
 title: "This Week In React #270: Next.js, React Router, TanStack, Ink, Async, AI | Hermes, React Navigation, CSS Grid, Maestro, QuickPush, Screens, Expo Skills, Async Storage | Node, Oxfmt, TypeScript, Border Shape, Sprites"
-authors: [slorber]
+authors: [kacperkapusciak, piaskowyk]
 date: 02-25-2026
 ---
 
